# claude-code-to-sqlite

./: README.md  pyproject.toml
claude_code_to_sqlite/: __init__.py  cli.py  utils.py
tests/: test_utils.py
