[project]
name = "claude-code-to-sqlite"
version = "0.1.0"
description = "Save Claude Code session transcripts to a SQLite database"
authors = [{ name = "hockinghills" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "click",
    "sqlite-utils>=3.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/hockinghills/claude-code-to-sqlite"
Issues = "https://github.com/hockinghills/claude-code-to-sqlite/issues"

[project.scripts]
claude-code-to-sqlite = "claude_code_to_sqlite.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
